<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealDetails"
    android:background="@color/bg_grey"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MainActivity.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/mealTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/breakfast"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <TextView
            android:id="@+id/proteinOverviewInt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/dark_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/carbOverviewInt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kcalsRemainTxt2" />

        <TextView
            android:id="@+id/carbOverviewTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carbs_txt"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/dark_grey"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/carbOverviewInt"
            app:layout_constraintStart_toStartOf="@+id/carbOverviewInt"
            app:layout_constraintTop_toBottomOf="@+id/carbOverviewInt" />

        <TextView
            android:id="@+id/fatOverviewInt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/dark_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/carbOverviewInt"
            app:layout_constraintTop_toBottomOf="@+id/kcalsRemainTxt2" />

        <TextView
            android:id="@+id/carbOverviewInt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/dark_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kcalsRemainTxt2" />

        <TextView
            android:id="@+id/proteinOverviewTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proteins_txt"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/dark_grey"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/proteinOverviewInt"
            app:layout_constraintStart_toStartOf="@+id/proteinOverviewInt"
            app:layout_constraintTop_toBottomOf="@+id/proteinOverviewInt" />

        <TextView
            android:id="@+id/fatOverviewTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fats_txt"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/dark_grey"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/fatOverviewInt"
            app:layout_constraintStart_toStartOf="@+id/fatOverviewInt"
            app:layout_constraintTop_toBottomOf="@+id/fatOverviewInt" />

        <TextView
            android:id="@+id/kcalsRemainTxt2"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/home_txt_1"
            android:textAlignment="center"
            android:textSize="10dp"
            app:layout_constraintEnd_toEndOf="@+id/netRemainInt3"
            app:layout_constraintStart_toStartOf="@+id/netRemainInt3"
            app:layout_constraintTop_toBottomOf="@+id/netRemainInt3" />

        <TextView
            android:id="@+id/netRemainInt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif"
            android:text="0000"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mealFoodList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="240dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/addFoodFAB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFoodFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/green_main"
        android:src="@drawable/ic_add"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>